Added properties, toString() and dumpCertPath()